--- a/src/pages/management-app/planner/view/view.html
+++ b/src/pages/management-app/planner/view/view.html
@@ -2,18 +2,123 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content >
+<ion-content class="csPlainGray">
+
     <div *ngIf="event">
-        <ion-card>
+            <div class="event-header">
+                    <img *ngIf="event.employeePicUrl" [src]="event.employeePicUrl">
+                    <img *ngIf="!event.employeePicUrl" src="https://pbs.twimg.com/media/Cqw_815XYAAiRha.jpg">
+            </div>
+            <div class="timing">
+                <div start>
+                    {{event.startTime | amLocale:'en' | amDateFormat:'MMM Do, h:mm A'}}
+                </div>
+                <div end>
+                    {{event.endTime | amLocale:'en' | amDateFormat:'MMM Do, h:mm A'}}
+                </div>
+            </div>
+            <div class="intro">
+                <h4>{{event.employeName}}</h4>
+                {{ event.title }}
+                <br>
+                <ion-badge [style.background-color]="event.mainAudienceColor">{{ event.createdAt | amLocale:'en' | amDateFormat:'MMM Do, h:mm A' }}</ion-badge>
+                <p no-margin>
+                    {{ event.description }}
+                </p>
+            </div>
+            <ion-card class="details">
+                <ion-list>
+                    <ion-item>
+                        <ion-icon name="people" item-left [style.color]="event.mainAudienceColor"></ion-icon>
+                        <small>
+                            Audience
+                        </small>
+                        <h4>{{event.mainAudienceName}}</h4>
+                    </ion-item>
+                        <ion-item *ngIf="event.location">
+                                <ion-icon name="navigate" item-left [style.color]="event.mainAudienceColor"></ion-icon>
+                                <small>
+                                    Location
+                                </small>
+                                <h4>
+                                    {{event.location}}
+                                </h4>
+                        </ion-item>
+                        <ion-item *ngIf="event.programs && event.programs.length!=0">
+                                <ion-icon name="code" item-left [style.color]="event.mainAudienceColor"></ion-icon>
+                                <small>
+                                    Programs
+                                </small>
+                                <h4 *ngFor="let program of event.programs">
+                                    {{ program }}
+                                </h4>
+                        </ion-item>    
+                        <ion-item *ngIf="event.departments && event.departments.length!=0">
+                                <ion-icon name="barcode" item-left [style.color]="event.mainAudienceColor"></ion-icon>
+                                <small>
+                                        Departments
+                                </small>
+                                <h4 *ngFor="let department of event.departments">
+                                    {{ department }}
+                                </h4>
+                        </ion-item> 
+                        <ion-item *ngIf="event.modules && event.modules.length!=0">
+                                <ion-icon name="apps" item-left [style.color]="event.mainAudienceColor"></ion-icon>
+                                <small>
+                                    Modules
+                                </small>
+                                <h4 *ngFor="let module of event.modules">
+                                    {{ module }}
+                                </h4>
+                        </ion-item>   
+                        <ion-item  *ngIf="event.audiences && event.audiences.length!=0">
+                                <ion-icon name="people" item-left [style.color]="event.mainAudienceColor"></ion-icon>
+                                <small>
+                                    Modules
+                                </small>
+                                <h4 *ngFor="let audience of event.audiences">
+                                    {{ audience }}
+                                </h4>
+                        </ion-item>  
+                </ion-list>
+            </ion-card>
+
+            <ion-card *ngIf="event.fileCount>0" class="attachments">
+                <ion-card-header>
+                    Attachments
+                </ion-card-header>
+                <ion-card-content>
+                        <button ion-button icon-left block color="primary" small *ngFor="let file of event.files;let i = index" (click)="onFileClick(file,i)">
+                                <ion-icon name="attach" style="color:white"></ion-icon>
+                                <span>{{file.fileOriginalName}}</span>
+                        </button>
+                </ion-card-content>
+
+            </ion-card>
+
+            <ion-fab right bottom>
+                    <button ion-fab color="primary"><ion-icon name="options"></ion-icon></button>
+                    <ion-fab-list side="top">
+                      <button ion-fab color="color4" (click)="onDeleteBtn()"><ion-icon name="trash"></ion-icon></button>
+                      <button ion-fab color="color4" (click)="onEditBtn()"><ion-icon name="create"></ion-icon></button>
+                    </ion-fab-list>
+            </ion-fab>
+
+
+
+
+
+
+        <!-- <ion-card>
             <ion-card-header>
                 {{event.title}}
             </ion-card-header>
             <ion-card-content>
                 {{event.description}}
             </ion-card-content>
-        </ion-card>
+        </ion-card> -->
 
-        <ion-card>
+        <!-- <ion-card>
             <ion-item>
                 <ion-icon item-start name="clock"></ion-icon>
 
@@ -23,26 +128,26 @@
                     <b>End: </b>{{event.endTime | amLocale:'en' | amDateFormat:'MMM Do, h:mm A'}}</p>
 
             </ion-item>
-        </ion-card>
+        </ion-card> -->
 
-        <ion-card>
+        <!-- <ion-card>
             <ion-item>
                 <ion-icon item-start name="person"></ion-icon>
                 <ion-label>
                     <b>Created By: </b>{{event.employeName}}</ion-label>
             </ion-item>
-        </ion-card>
+        </ion-card> -->
 
-        <ion-card *ngIf="event.location">
+        <!-- <ion-card *ngIf="event.location">
             <ion-item>
                 <ion-icon item-start name="home"></ion-icon>
                 <ion-label>
                     <b>Location: </b>{{event.location}}</ion-label>
             </ion-item>
-        </ion-card>
+        </ion-card> -->
 
 
-        <ion-card *ngIf="event.programs && event.programs.length!=0">
+        <!-- <ion-card *ngIf="event.programs && event.programs.length!=0">
             <ion-item>
                 <ion-icon item-start name="people"></ion-icon>
                 <p>
@@ -52,9 +157,9 @@
                     {{audience}}
                 </p>
             </ion-item>
-        </ion-card>
+        </ion-card> -->
 
-        <ion-card *ngIf="event.departments && event.departments.length!=0">
+        <!-- <ion-card *ngIf="event.departments && event.departments.length!=0">
             <ion-item>
                 <ion-icon item-start name="people"></ion-icon>
                 <p>
@@ -64,8 +169,8 @@
                     {{audience}}
                 </p>
             </ion-item>
-        </ion-card>
-
+        </ion-card> -->
+<!-- 
         <ion-card *ngIf="event.modules && event.modules.length!=0">
             <ion-item>
                 <ion-icon item-start name="people"></ion-icon>
@@ -76,9 +181,9 @@
                     {{audience}}
                 </p>
             </ion-item>
-        </ion-card>
+        </ion-card> -->
 
-        <ion-card *ngIf="event.audiences && event.audiences.length!=0">
+        <!-- <ion-card *ngIf="event.audiences && event.audiences.length!=0">
             <ion-item>
                 <ion-icon item-start name="people"></ion-icon>
                 <p>
@@ -88,20 +193,20 @@
                     {{audience}}
                 </p>
             </ion-item>
-        </ion-card>
+        </ion-card> -->
 
-        <div *ngIf="event.fileCount>0">
+        <!-- <div *ngIf="event.fileCount>0">
 
             <h4>Attachments:</h4>
             <a style="display:block" *ngFor="let file of event.files;let i = index" (click)="onFileClick(file,i)">
                 {{file.fileOriginalName}}
             </a>
-        </div>
+        </div> -->
     </div>
 
 </ion-content>
 
-<ion-footer>
+<!-- <ion-footer>
     <button ion-button icon-start col-5 (click)="onEditBtn()">
         <ion-icon name="create"></ion-icon>
         Edit
@@ -110,4 +215,4 @@
         <ion-icon name="trash"></ion-icon>
         Delete
     </button>
-</ion-footer>
+</ion-footer> -->
