Changed user image

--- a/src/pages/management-app/planner/view/view.html
+++ b/src/pages/management-app/planner/view/view.html
@@ -7,7 +7,7 @@
     <div *ngIf="event">
             <div class="event-header">
                     <img *ngIf="event.employeePicUrl" [src]="event.employeePicUrl">
-                    <img *ngIf="!event.employeePicUrl" src="https://pbs.twimg.com/media/Cqw_815XYAAiRha.jpg">
+                    <img *ngIf="!event.employeePicUrl" src="assets/images/user.png">
             </div>
             <div class="timing">
                 <div start>
