--- a/src/custom-components/account/account.scss
+++ b/src/custom-components/account/account.scss
@@ -7,13 +7,6 @@
     font-size: 25px;
   }
   
-  // .csKeyBackground{
-  //   @extend .setBottom;
-  //   background-repeat: no-repeat;
-  //   bottom:0px;
-  //   background-image: csBackgroundSvg('key.svg');
-  // }
-  
   .toolbar-title-ios , .toolbar-title-md , .toolbar-title-wp, .bar-button-default-wp, .bar-button-default-md, .bar-button-default-ios{
     color: white;
   }
@@ -64,4 +57,5 @@
   }
   .csProfileCardDetails{
    height: 52px !important;
+   box-shadow: 0px 0px 0px color($colors,primary) !important;
   }
