--- a/src/pages/management-app/circular/newCircular/newCircular.scss
+++ b/src/pages/management-app/circular/newCircular/newCircular.scss
@@ -1,4 +1,4 @@
-new-circular,edit-planner,new-planner{
+new-circular,edit-planner,new-planner,new-assignment{
     .large-icon{
         font-size: 10vw;
         text-align: center;
