Updated sidebar icons

--- a/src/pages/management-app/timeTable/main/main.scss
+++ b/src/pages/management-app/timeTable/main/main.scss
@@ -54,3 +54,7 @@ time-table {
 .right-col{
     padding-left:5px !important;
 }
+
+.segment-ios .segment-button.segment-activated{
+    border-bottom: 2px solid white;
+}
