ramjas login page added to gulf

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -159,3 +159,7 @@ position: relative;
 .csAppFooter{
   border-radius: 20px !important;
 }
+
+.background-image{
+  background-image: url('../assets/back.png');
+}
