--- a/src/custom-components/login/login.scss
+++ b/src/custom-components/login/login.scss
@@ -32,3 +32,21 @@
       border-radius: 0px !important;
     }
   }
+
+  .center-block {
+    display:block;
+    margin:auto;
+}
+    
+.logo {
+    margin:10% auto;
+}
+
+.badge-full {
+    width:100%;
+    text-align:center;
+}
+
+.shadow1 {
+    box-shadow: 0px 4px 27px lighten(color($colors,primary),20%);
+}
