--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,7 @@
 // Primary color for whatsApp color: #13665c
 
 $colors: (
-  primary:    #9362F6,
+  primary:    #7C0A02,
   secondary:  #fff,
   danger:     #f53d3d,
   light:      #fff,
@@ -29,7 +29,7 @@ white
   dark:       #222,
   cool:       #607D8B,
   fab:        #3e9e3e,
-  header:     #387ef5,
+  header:     #f53d3d,
   // color1:     #00bcd4,
   colorLight: #80deea,
   transparent: rgba(0, 0, 0, 0),
@@ -65,7 +65,7 @@ white
 );
 
 $color0 :       #fd4544;
-$color1 :       #9362F6;
+$color1 :       #7C0A02;
 $csPink:        #f6c2d8;
 $csDarkPink:    #d35a7b;
 $colorLight:    #00acc1;
