--- a/src/custom-components/login/login.scss
+++ b/src/custom-components/login/login.scss
@@ -50,3 +50,9 @@
 .shadow1 {
     box-shadow: 0px 4px 27px lighten(color($colors,primary),20%);
 }
+
+login-page{
+  .segment-ios .segment-button.segment-activated {
+    border-bottom: 3px solid black !important;
+  }
+}
