--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,12 +23,12 @@
 $colors: (
   primary:    #7C0A02,
   secondary:  #fff,
-  danger:     #f53d3d,
+  danger:     #F44336,
   light:      #fff,
 white
   dark:       #222,
-  cool:       #607D8B,
-  fab:        #3e9e3e,
+  cool:       #03A9F4,
+  fab:        #CDDC39,
   header:     #f53d3d,
   // color1:     #00bcd4,
   colorLight: #80deea,
